--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
              "type": "cppvsdbg",
              "request": "launch",
              "program": "node",
-             "args": [ "${workspaceFolder}/dev/addonTest.js" ],
+             "args": [ "${workspaceFolder}/dev/index.js" ],
              "stopAtEntry": false,
              "cwd": "${workspaceFolder}",
              "environment": [],
@@ -17,7 +17,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "/usr/bin/node",
-            "args": [ "${workspaceFolder}/dev/addonTest.js" ],
+            "args": [ "${workspaceFolder}/dev/index.js" ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
