--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "gypfile": true,
   "scripts": {
-    "start": "node dev/index.js",
-    "debug": "node --nolazy --inspect-brk=9229 dev/index.js",
-    "build:dev": "node-gyp build --debug",
-    "build": "node-gyp build",
-    "rebuild:dev": "node-gyp rebuild --debug",
-    "rebuild": "node-gyp rebuild",
+    "start": "tsc & node dev/index.js",
+    "debug": "tsc & node --nolazy --inspect-brk=9229 dev/index.js",
+    "build:dev": "tsc & node-gyp build --debug",
+    "build": "tsc & node-gyp build",
+    "rebuild:dev": "tsc & node-gyp rebuild --debug",
+    "rebuild": "tsc & node-gyp rebuild",
     "clean": "node-gyp clean"
   },
   "types": "filesystem-utilities.d.ts",
