--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "gypfile": true,
   "scripts": {
-    "start linux": "tsc & node dev/linux.js",
-    "debug linux": "tsc & node --nolazy --inspect-brk=9229 dev/linux.js",
-    "start windows": "tsc & node dev/windows.js",
-    "debug windows": "tsc & node --nolazy --inspect-brk=9229 dev/windows.js",
+    "start-linux": "tsc & node dev/linux.js",
+    "debug-linux": "tsc & node --nolazy --inspect-brk=9229 dev/linux.js",
+    "start-windows": "tsc & node dev/windows.js",
+    "debug-windows": "tsc & node --nolazy --inspect-brk=9229 dev/windows.js",
     "build:dev": "tsc & node-gyp build --debug",
     "build": "tsc & node-gyp build",
     "rebuild:dev": "tsc & node-gyp rebuild --debug",
