--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filesystem-utilities",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "File system utilities for Node.js",
   "main": "index.js",
   "gypfile": true,
@@ -35,6 +35,7 @@
     "node-addon-api": "^3.0.2"
   },
   "devDependencies": {
-    "bindings": "^1.5.0"
+    "bindings": "^1.5.0",
+    "typescript": "^4.4.4"
   }
 }
