CopyFiles with progress and promise, no nullfunction neccessary

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,7 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
+            "preLaunchTask": "buildlinux",
             "externalConsole": false,
             "MIMode": "gdb",
         },          
