--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "debug-linux": "tsc & node --nolazy --inspect-brk=9229 dev/linux.js",
     "start-windows": "tsc & node dev/windows.js",
     "debug-windows": "tsc & node --nolazy --inspect-brk=9229 dev/windows.js",
-    "build:dev": "tsc & node-gyp build --debug",
+    "build-dev": "tsc & node-gyp build --debug",
     "build": "tsc & node-gyp build",
-    "rebuild:dev": "tsc & node-gyp rebuild --debug",
+    "rebuild-dev": "tsc & node-gyp rebuild --debug",
     "rebuild": "tsc & node-gyp rebuild",
     "clean": "node-gyp clean"
   },
