Debug nodejs with codelldb

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,16 +15,16 @@
          },
          {
             "name": "Launch C++ (Linux)",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
             "program": "/usr/bin/node",
             "args": [ "${workspaceFolder}/dev/linux.js" ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "preLaunchTask": "buildlinux",
+            "terminal.integrated.automationShell.linux": "bash",
+            "preLaunchTask": "build",
             "externalConsole": false,
-            "MIMode": "gdb",
         },          
         {
             "name": "Launch javascript (linux)",
