--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "optional": "cpp"
+        "*.ui": "xml",
+        "optional": "cpp",
+        "tuple": "cpp"
     }
 }
