--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filesystem-utilities",
-  "version": "6.3.4",
+  "version": "6.3.8",
   "description": "File system utilities for Node.js",
   "main": "index.js",
   "gypfile": true,
@@ -14,7 +14,8 @@
     "rebuild-dev": "node-gyp rebuild --debug",
     "rebuild": "node-gyp rebuild",
     "clean": "node-gyp clean",
-    "do publish": "npm publish"
+    "do publish": "npm publish",
+    "do publish test": "npm publish --dry-run"
   },
   "types": "filesystem-utilities.d.ts",
   "repository": {
