Several new images home drive .<name> as hidden Windows exceptions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "*.ui": "xml",
         "optional": "cpp",
         "tuple": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "vector": "cpp",
+        "type_traits": "cpp"
     }
 }
