Trim error in Windows

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
   "bugs": {
     "url": "https://github.com/uriegel/filesystem-utils/issues"
   },
-  "homepage": "https://github.com/uriegel/filesystem-utils#readme",
+  "homepage": "https://github.com/uriegel/filesystem-utils#readme"
 }
