copyFiles (Linux) started

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "tuple": "cpp",
         "iosfwd": "cpp",
         "vector": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "string_view": "cpp"
     }
 }
