--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "iosfwd": "cpp",
         "vector": "cpp",
         "type_traits": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "format": "cpp"
     }
 }
