--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "name": "Launch C++ (Linux)",
             "type": "lldb",
             "request": "launch",
-            "program": "/usr/bin/node",
+            "program": "/home/uwe/.nvm/versions/node/v22.21.0/bin/node",
             "args": [ "${workspaceFolder}/dev/linux.js" ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
