--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "vector": "cpp",
         "type_traits": "cpp",
         "string_view": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "xstring": "cpp"
     }
 }
